samples/_failures_safe/1761410883_1bdfcc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ff6f176.c: In function ‘main’:
./samples/SAFE/__tmp_7ff6f176.c:141:16: error: missing terminating " character
  141 |         printf("%s %s %s
      |                ^~~~~~~~~
./samples/SAFE/__tmp_7ff6f176.c:141:9: error: expected expression at end of input
  141 |         printf("%s %s %s
      |         ^~~~~~
./samples/SAFE/__tmp_7ff6f176.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ff6f176.c:141:9: error: expected declaration or statement at end of input
